completati rispettivamente esercizi html, css e js

--- a/Esami/Esame_2023_06_26/Esercizio4.html
+++ b/Esami/Esame_2023_06_26/Esercizio4.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="Esercizio4.css">
-        <script src="Esercizio4.js"></script>
-    </head>
-    <body>
-        <div>
-            <span>Input testuale</span>
-            <textarea id="textarea-to-count"></textarea>
-            <div>
-                <div>
-                    <span>Caratteri: <span id="span-characters">0</span></span>
-                    <span>Parole: <span id="span-words">0</span></span>
-                </div>
-                <span>Rimanenti: <span id="span-last-words">300</span></span>
-            </div>
-            <button id="button-reset">Reset</button>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="Esercizio4.css">
+		<script src="Esercizio4.js"></script>
+	</head>
+	<body>
+		<div>
+			<p>Input testuale</p>
+			<textarea id="textarea-input"></textarea>
+			<div>
+				<div>
+					<span>Caratteri:<span id="span-numero-caratteri"> 0</span></span>
+					<span>Parole:<span id="span-numero-parole"> 0</span></span>
+				</div>
+				<span>Rimanenti:<span id="span-caratteri-rimanenti"> 300</span></span>
+			</div>
+		</div>
+	</body>
 </html>
